No JavaScript text changed

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>5.d infó weboldal</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Szia! Köszi, hogy meglátogattad a weboldalamat.<br />Viszont ahhoz hogy használhasd a weboldalat, be kell kapcsolnod a JavaScriptet. Köszi!</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
