--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,13 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-      
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "c7952cee95054d2cb20ca08c4d59875d"}'
+    ></script>
+    <!-- End Cloudflare Web Analytics -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,7 +34,11 @@
     <title>6.d infó weboldal</title>
   </head>
   <body>
-    <noscript>Szia! Köszi, hogy meglátogattad a weboldalamat.<br />Viszont ahhoz hogy használhasd a weboldalat, be kell kapcsolnod a JavaScriptet. Köszi!</noscript>
+    <noscript
+      >Szia! Köszi, hogy meglátogattad a weboldalamat.<br />Viszont ahhoz hogy
+      használhasd a weboldalat, be kell kapcsolnod a JavaScriptet.
+      Köszi!</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
