--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Az arany iskola hetedik dé osztály weboldala"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!-- Cloudflare Web Analytics -->
     <script
       defer
@@ -22,33 +17,11 @@
       data-cf-beacon='{"token": "c7952cee95054d2cb20ca08c4d59875d"}'
     ></script>
     <!-- End Cloudflare Web Analytics -->
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>6.d infó weboldal</title>
+    <title>7.d infó weboldal</title>
   </head>
   <body>
-    <noscript
-      >Szia! Köszi, hogy meglátogattad a weboldalamat.<br />Viszont ahhoz hogy
-      használhasd a weboldalat, be kell kapcsolnod a JavaScriptet.
-      Köszi!</noscript
-    >
+    <noscript>Wow. Nem hiszem el, hogy létezik olyan ember, aki kikapcsolva hagyja a Javascriptet. Hát gratulálok. Na menj oszt' kapcsold be!</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
