Migrated to vite! all functions tested, still have to config vercel.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
       name="description"
       content="Az arany iskola hetedik dé osztály weboldala"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- Cloudflare Web Analytics -->
     <script
@@ -23,5 +22,6 @@
   <body>
     <noscript>Wow. Nem hiszem el, hogy létezik olyan ember, aki kikapcsolva hagyja a Javascriptet. Hát gratulálok. Na menj oszt' kapcsold be!</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
